# starml

./: .ftpconfig  .gitignore  .gitmodules  CMakeLists.txt  README.md
cmake/: FindEigen3.cmake  starml.cmake  third_party.cmake
cmake/public/: CUDA.cmake  Utils.cmake
include/starml/basic/: Matrix.h  allocator.h  allocator_cpu.h  allocator_cuda.h  common_cuda.h  context_cuda.h  copy_bytes.h  data_ptr.h  device.h  dispatch.h  handle.h  handle_cuda.h  matrix.h  matrix_options.h  matrix_printer.h  storage.h  type.h
include/starml/dataloader/: dataloader.h
include/starml/modelevaluator/metrics/: metrics.h  metrics_op.h  mse_op.h
include/starml/models/linear_regression/: linear_regression.h
include/starml/models/logistic_regression/: logistic_regression.h
include/starml/operators/: add_scalar.h  binary_ops.h  concat.h  copy.h  factories.h  matmul.h  solve.h  transpose.h  unary_ops.h
include/starml/optimizer/: SGD.h  momentum.h  optimizer.h
include/starml/preprocessing/scaler/: standardscaler.h  standardscaler_op.h
include/starml/utils/: loguru.h  timer_cpu.h  timer_cuda.h
starml/: starml.cpp  starml.h
starml/basic/: Matrix.cpp  allocator.cpp  allocator_cpu.cpp  allocator_cuda.cpp  common_cuda.cpp  context_cuda.cpp  copy_bytes.cpp  data_ptr.cpp  device.cpp  handle_cuda.cpp  matrix.cpp  matrix_printer.cpp  storage.cpp  type.cpp
starml/dataloader/: UCI_format.cpp  csv_format.cpp  dataloader.cpp  libsvm_format.cpp
starml/modelevaluator/metrics/: metrics.cpp  metrics_op.cpp  mse_op.cpp
starml/modelevaluator/metrics/cpu/: metrics_kernel.cpp  mse_kernel.cpp
starml/modelevaluator/metrics/cuda/: metrics_kernel.cu  mse_kernel.cu
starml/models/linear_regression/: linear_regression.cpp
starml/models/logistic_regression/: logistic_regression.cpp
starml/operators/: add_scalar.cpp  binary_op.cpp  binary_ops.cpp  concat.cpp  copy.cpp  factories.cpp  matmul.cpp  solve.cpp  transpose.cpp  unary_op.cpp  unary_ops.cpp
starml/operators/cpu/: add_scalar_kernel.cpp  binary_kernel.cpp  concat_kernel.cpp  copy_kernel.cpp  factories_kernel.cpp  lu_solve_kernel.cpp  matmul_kernel.cpp  transpose_kernel.cpp  unary_kernel.cpp
starml/operators/cuda/: add_scalar_kernel.cu  binary_kernel.cu  concat_kernel.cu  copy_kernel.cu  factories_kernel.cu  lu_solve_kernel.cu  matmul_kernel.cu  transpose_kernel.cu  unary_kernel.cu
starml/optimizer/: SGD.cpp  momentum.cpp
starml/optimizer/cpu/: momentum_op.cpp  sgd_op.cpp
starml/optimizer/cuda/: momentum_op.cu  sgd_op.cu
starml/preprocessing/scaler/: standardscaler.cpp  standardscaler_op.cpp
starml/preprocessing/scaler/cpu/: standardscaler_kernel.cpp
starml/preprocessing/scaler/cuda/: standardscaler_kernel.cu
test/: CMakeLists.txt  main.cpp  test_binary.cpp  test_concat.cpp  test_dataloader.cpp  test_logistic.cpp  test_lr.cpp  test_matmul.cpp  test_matrix.cpp  test_metrics.cpp  test_optim.cpp  test_scaler.cpp  test_solve.cpp  test_transpose.cpp  test_unary.cpp
